@@ -1,0 +1,5 @@
+﻿SetBar()
+
+procedure SetBar
+bar := "foo"
+return
